Updated @nrwl dependency to 13.2.1

--- a/nx.json
+++ b/nx.json
@@ -1,19 +1,37 @@
 {
   "npmScope": "simondotm",
-  "affected": { "defaultBase": "main" },
+  "affected": {
+    "defaultBase": "main"
+  },
   "implicitDependencies": {
-    "package.json": { "dependencies": "*", "devDependencies": "*" },
+    "package.json": {
+      "dependencies": "*",
+      "devDependencies": "*"
+    },
     ".eslintrc.json": "*"
   },
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
+      "options": {
+        "cacheableOperations": ["build", "lint", "test", "e2e"],
+        "parallel": 1
+      }
     }
   },
-  "projects": {
-    "nx-firebase": { "tags": [] },
-    "nx-firebase-e2e": { "tags": [], "implicitDependencies": ["nx-firebase"] }
+  "workspaceLayout": {
+    "appsDir": "e2e",
+    "libsDir": "packages"
   },
-  "workspaceLayout": { "appsDir": "e2e", "libsDir": "packages" }
+  "targetDependencies": {
+    "build": [
+      {
+        "target": "build",
+        "projects": "dependencies"
+      }
+    ]
+  },
+  "cli": {
+    "defaultCollection": "@nrwl/workspace"
+  }
 }
