--- a/package.json
+++ b/package.json
@@ -32,31 +32,33 @@
   "private": true,
   "dependencies": {
     "fs-extra": "^10.0.0",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "@angular-devkit/schematics": "13.0.3",
+    "@angular-devkit/architect": "0.1300.3"
   },
   "devDependencies": {
-    "@nrwl/cli": "12.3.4",
-    "@nrwl/devkit": "12.3.4",
-    "@nrwl/eslint-plugin-nx": "12.3.4",
-    "@nrwl/jest": "12.3.4",
-    "@nrwl/linter": "12.3.4",
-    "@nrwl/node": "12.3.4",
-    "@nrwl/nx-plugin": "12.3.4",
-    "@nrwl/tao": "12.3.4",
-    "@nrwl/workspace": "12.3.4",
-    "@types/jest": "26.0.8",
+    "@nrwl/cli": "13.2.1",
+    "@nrwl/devkit": "13.2.1",
+    "@nrwl/eslint-plugin-nx": "13.2.1",
+    "@nrwl/jest": "13.2.1",
+    "@nrwl/linter": "13.2.1",
+    "@nrwl/node": "13.2.1",
+    "@nrwl/nx-plugin": "13.2.1",
+    "@nrwl/tao": "13.2.1",
+    "@nrwl/workspace": "13.2.1",
+    "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
-    "dotenv": "8.2.0",
-    "eslint": "7.22.0",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "dotenv": "10.0.0",
+    "eslint": "7.32.0",
     "eslint-config-prettier": "8.1.0",
-    "jest": "26.2.2",
-    "prettier": "2.2.1",
+    "jest": "27.2.3",
+    "prettier": "2.4.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "26.5.5",
+    "ts-jest": "27.0.5",
     "ts-node": "~9.1.1",
     "tslib": "^2.0.0",
-    "typescript": "~4.1.4"
+    "typescript": "4.3.5"
   }
 }
