chore(deps): Migrated @nrwl mono-repo to 13.4.1

--- a/nx.json
+++ b/nx.json
@@ -32,6 +32,7 @@
     ]
   },
   "cli": {
-    "defaultCollection": "@nrwl/workspace"
+    "defaultCollection": "@nrwl/workspace",
+    "packageManager": "yarn"
   }
 }
